--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gleam - To Do</title>
+    <title>todolist</title>
     <style>
         * {
             margin: 0;
@@ -330,7 +330,7 @@
     <!-- Auth Page -->
     <div class="auth-page" id="authPage">
         <div class="auth-box">
-            <div class="logo">GLEAM</div>
+            <div class="logo">todolist</div>
             <div class="tagline">Stay organized. Stay focused.</div>
             
             <div id="errorMsg" class="error-msg hidden"></div>
@@ -611,4 +611,5 @@
     </script>
 
 </body>
+
 </html>
